<resources>
    <string name="app_name">M3_App</string>
    <string name="title_help">Help</string>
    <string name="title_account">Account</string>
    <string name="title_activity_center">Booked Trips</string>
    <string name="title_search">Search</string>
    <string name="button_book_ticket">Book Tickets</string>
    <string name="title_ratings">Ratings</string>
    <string name="train_company_logo">Train Company Logo</string>
    <string name="hint_message"><![CDATA[
    Click on <img src="star_24px" /> to see routes and our picks for that destination
  ]]></string>
    <string name="filters">Filters</string>
    <string name="activities_along_the_way">Activities along the way</string>
    <string name="art_and_culture">Art and Culture</string>
    <string name="extra_options">Extra Options</string>
    <string name="barrier_free">Barrier Free</string>
    <string name="scenic_views">Scenic Views</string>
    <string name="close">Close</string>
    <string name="along_the_river">Along the river</string>
    <string name="forest">Forest</string>
    <string name="mountains">Mountains</string>
    <string name="audio_guide">Audio Guide</string>
    <string name="no_transfers">No Transfers</string>
    <string name="with_sights">With Sights</string>
    <string name="top_rated">Top Rated</string>
    <string name="family_fun">Family Fun</string>
    <string name="history_heritage">History/heritage</string>
    <string name="train_icon">Train Icon</string>
    <string name="train_type">Train type</string>
    <string name="buy_ticket">Buy ticket:</string>
    <string name="_4_stops">4 stops ▼</string>
    <string name="stop_name">• Stop name</string>
    <string name="vienna_hbf">Vienna Hbf</string>
    <string name="connection_view">Layover: xx min\nTransfer to the connecting Railjet</string>
    <string name="rebook">Rebook</string>
    <string name="more_information">More information</string>
    <string name="map">Map</string>
    <string name="date">Date</string>
    <string name="template_name">Template Name</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="scenery_type">Scenery type</string>
    <string name="like">like</string>
    <string name="image">image</string>
    <string name="comment">Comment</string>
    <string name="user_s_photos">User\'s photos:</string>
    <string name="info">Info</string>
    <string name="end_stop">End Stop</string>
    <string name="trip_details">Trip details</string>
    <string name="suggestions">Suggestions</string>
    <string name="back">Back</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="header_image">Header Image</string>
    <string name="specific_destination">Specific Destination</string>
    <string name="inspire_me_from_here">Find Routes from Here</string>
    <string name="search">Search</string>
    <string name="see_all">See all</string>
    <string name="search_results">Search Results</string>
    <string name="filter">Filter</string>
    <string name="reset_all_filters">Reset all filters</string>
    <string name="from_to">FROM ...... TO</string>
    <string name="upload_photo">Upload Photo +</string>
    <string name="publish">Publish</string>
    <string name="profile_picture">Profile picture</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="show_all">Show all</string>
    <string name="weather">weather</string>
    <string name="_20_22_c">20-22 °C</string>
    <string name="start">Start</string>
    <string name="no_end_destination">No End Destination</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="gdpr_privacy">GDPR/Privacy</string>
    <string name="contact_support">Contact Support</string>
    <string name="favourites">Favourites</string>
    <string name="scenic_view">Scenic View</string>
    <string name="ratings">Ratings</string>
    <string name="_4_0">4.0</string>
    <string name="route">Route</string>
    <string name="swiss_dream">Swiss Dream</string>
    <string name="journey_time">Journey Time</string>
    <string name="_9h_12min">9h 12min</string>
    <string name="cost">Cost</string>
    <string name="_239">239</string>
    <string name="distance">Distance</string>
    <string name="about_765_km">About 765 km</string>
    <string name="categories">Categories</string>
    <string name="along_the_river_forest">Along the river, forest</string>
    <string name="this_line_is_supported_by">This line is supported by</string>
    <string name="obb_westbahn">OBB, WESTbahn</string>
    <string name="stations_on_this_line">Stations on this line</string>
    <string name="vienna_st_polten_linz_salzburg_bludenz">Vienna - St.Polten - Linz - Salzburg - Bludenz</string>
    <string name="description">Description</string>
    <string name="text">Text</string>
    <string name="left_arrow">Left arrow</string>
    <string name="right_arrow">Right arrow</string>
    <string name="lines">Lines:</string>
    <string name="route_icon">Route icon</string>
    <string name="see_more"><![CDATA[See more ->]]></string>
    <string name="share">Share</string>
    <string name="about_this_line">About this line</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="activity_center">Booked Trips</string>
    <string name="my_account">My Account</string>
    <string name="hi_max_mustermann">Hi, Max Mustermann!</string>
    <string name="account_details">Account Details</string>
    <string name="username_mustermann">Username: mustermann</string>
    <string name="email_mmustermann_mail_at">Email: mmustermann@mail.at</string>
    <string name="my_favourites">My Favourites</string>
    <string name="log_out">Log Out</string>
    <string name="hint">Hint</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="got_it">Got it!</string>
</resources>