<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.m3_app.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.m3_app.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_activity_center"
        android:name="com.example.m3_app.ui.activity_center.ActivityCenterFragment"
        android:label="@string/title_activity_center"
        tools:layout="@layout/fragment_activity_center" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.example.m3_app.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="com.example.m3_app.ui.trip_details.TripDetailsFragment"
        android:label="Trip Details" />

</navigation>